feat: implemented initial rulebook parser and renderer